# Memo

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  backend.cpp  backend.hpp  main.cpp  note_panel.cpp  note_panel.hpp  panel_list_model.cpp  panel_list_model.hpp
src/icon/: resources.qrc
src/qml/: ApplicationSettings.qml  ConfigFooter.qml  ConfigTabApperance.qml  ConfigTabEditor.qml  ConfigWindow.qml  ControlPanel.qml  MainWindow.qml  Note.qml  NotePanel.qml  qml.qrc
